apps/cluster-core/external-secrets-operator/bitwarden-cli.yaml
# bitwarden-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  namespace: external-secrets
  labels:
    app: bitwarden-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden-cli
  template:
    metadata:
      labels:
        app: bitwarden-cli
    spec:
      containers:
        - name: bitwarden-cli
          image: ghcr.io/vehkiya/bw-cli:2025.12.0@sha256:85665c236c1ba9292005477116b1ba4220b551dc1453a106eaf8ca48d30f1a72
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: api
              containerPort: 8087
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 1
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli-service
  namespace: external-secrets
spec:
  selector:
    app: bitwarden-cli
  ports:
    - name: api
      protocol: TCP
      port: 8087
      targetPort: 8087
